--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Index</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title></title>
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-
+  <div id="page">
+    <div class="container-fluid">
+      <div class="col-offset-1 col-12">
+        <div class="jumbotron">
+          <h1></h1>
+        </div>
+      </div>
+      <div class="col-12">
+      </div>
+    </div>
+  </div>
+  {{ moment.include_jquery() }}
+  <script src="{{ url_for('static', filename='index.js') }}"></script>
 </body>
 </html>
